--- a/css/main.css
+++ b/css/main.css
@@ -65,67 +65,69 @@ a{
     color:#282828;
 }
 
+.title-bar{
+    background: #F5825F;
+    display: block;
+    
+}
 
-.title-bar {
-    background: #f2f3f2;
+.menu a, .menu .button {
+    padding: 0;
 }
 
 button.menu-icon::after {
-    border: 1px solid #333;
+    border: 1px solid #fff;
 }
 button.menu-icon:hover::after {
-    border: 1px solid #333;
+    border: 1px solid #fff;
 }
 .menu-icon::after {
-    background: #f2f3f2;
-    -webkit-box-shadow: 0 7px 0 #333, 0 14px 0 #333;
-    box-shadow: 0 7px 0 #333, 0 14px 0 #333;
+    background: #fff;
+    -webkit-box-shadow: 0 7px 0 #fff, 0 14px 0 #fff;
+    box-shadow: 0 7px 0 #fff, 0 14px 0 #fff;
 }
 .menu-icon:hover::after {
     background: #f2f3f2;
-    -webkit-box-shadow: 0 7px 0 #333, 0 14px 0 #333;
-    box-shadow: 0 7px 0 #333, 0 14px 0 #333;
+    -webkit-box-shadow: 0 7px 0 #fff, 0 14px 0 #fff;
+    box-shadow: 0 7px 0 #fff, 0 14px 0 #fff;
 }
 .top-bar {
+    background-color: #fff;
     text-align: center;
-    text-transform: uppercase;
-    box-shadow: 0px 1px 4px #999;
+    box-shadow: 0px 1px 4px #fff;
+    font-family: harfang-pro, serif;
+    font-size: 1.3rem;
 
 }
+
+.top-bar ul{
+    background-color: #fff;
+    display: block;
+}
+
+
+
 li {
     text-decoration: none;
     list-style-type: none;
     padding-top: .5em;
 }
 
-.top-bar-right {
-    margin: 0 auto;
-    background-color: #f2f3f2;
-}
-.top-bar-right ul {
-    background-color: #f2f3f2;
-}
-.top-bar-right ul {
-    margin-left: 0;
-}
-.top-bar-right a {
-    color: #333;
-}
-
 
 @media screen and (min-width: 64em) {
-#header{
-    padding-left: 3em;
-    padding-right: 3em;
-    
-}    
+    #header{
+        padding-left: 3em;
+        padding-right: 3em;
+        
+    }    
 
-#side-nav ul{
-    margin-left: 2em;
-}
+    #side-nav ul{
+        margin-left: 2em;
+    }
 
-
-
+    .top-bar {
+        text-align: left;
+    }
 }
 
 /* -----Footer------*/
